base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  annotations:
    argocd.argoproj.io/sync-wave: "0"
