base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: son-blog-base-deploy
  namespace: blog
  labels:
    app: son-blog-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: son-blog-base
  template:
    metadata:
      labels:
        app: son-blog-base
    spec:
      containers:
        - name: son-blog-base
          image: son-blog-image
          ports:
            - containerPort: 80
