base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: son-blog-base-service
  namespace: blog
spec:
  selector:
    app: son-blog-base
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
